[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://environments/cursor.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Cursor" type="TextureRect" parent="."]
margin_left = 960.0
margin_top = 612.0
margin_right = 984.0
margin_bottom = 636.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 83.0
margin_bottom = 68.0
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start Game"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Settings"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
